--- a/src/css/common.css
+++ b/src/css/common.css
@@ -16,3 +16,25 @@ img {
   display: block;
   max-width: 100%;
 }
+
+.timer { 
+  display: flex;
+  gap:1rem;
+  margin-top: 2rem;
+  margin-left: 1rem;
+}
+
+.field {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.field .value {
+  font-size: large;
+}
+
+.field .label{
+  font-size: small;
+}
+
